--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -37,6 +37,9 @@
   <PropertyGroup>
     <DelaySign>false</DelaySign>
   </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\docs\signature_keys\SafeOrbit.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -68,6 +71,7 @@
     <Compile Include="Common\Defaults.cs" />
     <Compile Include="Hash\ISafeHasher.cs" />
     <Compile Include="Hash\Sha512Hasher.cs" />
+    <Compile Include="Library\InternalsVisibleTo.cs" />
     <Compile Include="Library\LibraryManagement.cs" />
     <Compile Include="Encryption\Aes\AesEncryptor.cs" />
     <Compile Include="Encryption\Blowfish\BlowfishEncryptor.cs" />
@@ -257,11 +261,10 @@
     <Content Include="Random\TinHat\Crypto\License.html" />
     <Content Include="Random\TinHat\License.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Library\Defaults\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="SafeOrbit.licenseheader" />
+    <None Include="signature-key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
