changed the path of private keys

--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -38,7 +38,7 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\..\docs\signature_keys\SafeOrbit-key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\docs\signature_keys\private\SafeOrbit-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -264,7 +264,6 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="SafeOrbit.licenseheader" />
-    <None Include="signature-key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
