added necessary dependencies for random

--- a/src/SafeOrbitNetCore/project.json
+++ b/src/SafeOrbitNetCore/project.json
@@ -1,7 +1,8 @@
 ﻿{
   //"frameworkAssemblies": {
   //  "mscorlib": "",
-  //  "System": ""
+  //  "System": "",
+  //  "System.Security": ""
   //},
   "frameworks": {
     "netstandard1.6": {
@@ -10,7 +11,10 @@
         "NETStandard.Library": "1.6.0",
         "System.Runtime.Serialization.Primitives": "4.1.1",
         "System.Threading.Tasks.Parallel": "4.0.1",
-        "System.Reflection.TypeExtensions": "4.1.0"
+        "System.Reflection.TypeExtensions": "4.1.0",
+        "System.Security.Cryptography.ProtectedData": "4.0.0",
+        "System.Threading.Thread": "4.0.0",
+        "System.Threading.ThreadPool":"4.0.10"
       },
       "buildOptions": {
         "keyFile": "../../docs/signature_keys/private/SafeOrbit-key.snk"
