--- a/src/SafeOrbitNetCore/project.json
+++ b/src/SafeOrbitNetCore/project.json
@@ -17,6 +17,7 @@
         "System.Threading.ThreadPool":"4.0.10"
       },
       "buildOptions": {
+        "define": [ "NETCORE" ],
         "keyFile": "../../docs/signature_keys/private/SafeOrbit-key.snk"
       }
     },
