--- a/src/SafeOrbitNetCore/SafeOrbit.nuspec
+++ b/src/SafeOrbitNetCore/SafeOrbit.nuspec
@@ -18,12 +18,10 @@
 	</description>
     <releaseNotes>
 	------0.2------
-	-.NET Core is supported.
 	- [Security] FastRandom generates secure numbers.
-   	- [Security] Sha512Hasher now uses SafeRandom data as salt.
-	- [Security] Comparision for SafeBytes and SafeString uses XOR'ing to protect the byte.
-	- [Security] Changed the behaviour of MemoryDetector. Each memory detector object is only for a single object now.
+	-.NET Core is supported.
     - More/better documentations for the code.
+	- Refactorings, small changes.
 	- More tests
 	</releaseNotes>
     <copyright>Copyright 2016</copyright>
