--- a/src/tests/UnitTests/UnitTests.csproj
+++ b/src/tests/UnitTests/UnitTests.csproj
@@ -74,12 +74,11 @@
     <Compile Include="Internal\Helpers\AsyncHelper.cs" />
     <Compile Include="Internal\Helpers\SafeBytesHelper.cs" />
     <Compile Include="Internal\Helpers\SafeStringHelper.cs" />
-    <Compile Include="Internal\Stubs\InjectionDetectorFaker.cs" />
-    <Compile Include="Internal\Stubs\InstanceProviderFactoryFaker.cs" />
-    <Compile Include="Internal\Stubs\InstanceValidatorFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeObjectFactoryFaker.cs" />
+    <Compile Include="Internal\Fakes\InjectionDetectorFaker.cs" />
+    <Compile Include="Internal\Fakes\InstanceProviderFactoryFaker.cs" />
+    <Compile Include="Internal\Fakes\InstanceValidatorFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeObjectFactoryFaker.cs" />
     <Compile Include="Memory\SafeMemoryStreamTests.cs" />
-    <Compile Include="Memory\Common\IdGenerators\InstanceIdGeneratorTests.cs" />
     <Compile Include="Memory\Common\Injection\Alert\Alerters\AlerterTestsBase.cs" />
     <Compile Include="Memory\Common\Injection\Alert\Alerters\-DebugFailAlerterTests.cs" />
     <Compile Include="Memory\Common\Injection\Alert\Alerters\-DebugWriterTests.cs" />
@@ -114,30 +113,30 @@
     <Compile Include="Memory\SafeContainer\Instance\Validation\Rules\SingletonShouldNotDependOnTransientRuleTests.cs" />
     <Compile Include="Memory\SafeContainer\Instance\Validation\Rules\SingletonShouldNotImplementIDisposableTests.cs" />
     <Compile Include="Memory\SafeContainer\SafeContainerTests.cs" />
-    <Compile Include="Common\Reflection\TypeKeyGeneratorTests.cs" />
+    <Compile Include="Common\Reflection\TypeIdGeneratorTests.cs" />
     <Compile Include="Memory\Common\Serializer\SerializerTests.cs" />
     <Compile Include="Internal\Cases\SafeObjectCases.cs" />
     <Compile Include="Memory\SafeObject\SafeObjectTests.cs" />
     <Compile Include="Memory\SafeString\SafeStringTests.cs" />
     <Compile Include="Memory\SafeString\SafeStringToStringMarshalerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Internal\Stubs\ByteIdGeneratorFaker.cs" />
-    <Compile Include="Internal\Stubs\FastEncryptorFaker.cs" />
-    <Compile Include="Internal\Stubs\FastHasherFaker.cs" />
-    <Compile Include="Internal\Stubs\FastRandomFaker.cs" />
-    <Compile Include="Internal\Stubs\KeyDeriverFaker.cs" />
-    <Compile Include="Internal\Stubs\MemoryProtectorFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeByteCollectionFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeByteFactoryFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeByteFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeBytesFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeRandomFaker.cs" />
-    <Compile Include="Internal\Stubs\SafeStringFaker.cs" />
-    <Compile Include="Internal\Stubs\SerializerFaker.cs" />
+    <Compile Include="Internal\Fakes\ByteIdGeneratorFaker.cs" />
+    <Compile Include="Internal\Fakes\FastEncryptorFaker.cs" />
+    <Compile Include="Internal\Fakes\FastHasherFaker.cs" />
+    <Compile Include="Internal\Fakes\FastRandomFaker.cs" />
+    <Compile Include="Internal\Fakes\KeyDeriverFaker.cs" />
+    <Compile Include="Internal\Fakes\MemoryProtectorFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeByteCollectionFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeByteFactoryFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeByteFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeBytesFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeRandomFaker.cs" />
+    <Compile Include="Internal\Fakes\SafeStringFaker.cs" />
+    <Compile Include="Internal\Fakes\SerializerFaker.cs" />
     <Compile Include="Internal\Stubs.cs" />
-    <Compile Include="Internal\Stubs\TextServiceFaker.cs" />
-    <Compile Include="Internal\Stubs\TypeKeyGeneratorFaker.cs" />
-    <Compile Include="Common\Text\--TextServiceTests.cs" />
+    <Compile Include="Internal\Fakes\TextServiceFaker.cs" />
+    <Compile Include="Internal\Fakes\TypeIdGeneratorFaker.cs" />
+    <Compile Include="Common\Text\TextServiceTests.cs" />
     <Compile Include="Common\Utilities\FastTests.cs" />
   </ItemGroup>
   <ItemGroup>
