--- a/src/tests/IntegrationTests/IntegrationTests.csproj
+++ b/src/tests/IntegrationTests/IntegrationTests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Common\Text\EncodingVectors.cs" />
     <Compile Include="Common\Text\TextServiceTests.cs" />
+    <Compile Include="Cryptography\Encryption\AesEncryptorTests.cs" />
     <Compile Include="Encryption\AesTests.cs" />
     <Compile Include="Encryption\BlowfishTests.cs" />
     <Compile Include="Memory\SafeBytes\SafeBytesTests.cs" />
